syntax = "proto3";

option go_package = "game/generated/pb/game";

message Vector3
{
	double x = 1;
	double y = 2;
	double z = 3;
}




